--- a/prebuilt/init.omap4460.rc
+++ b/prebuilt/init.omap4460.rc
@@ -32,8 +32,8 @@
 import init.omap4460.usb.rc
 
 on early-init
-    export EXTERNAL_STORAGE /storage/sdcard0
-    export SECONDARY_STORAGE /storage/sdcard1
+    export EXTERNAL_STORAGE /storage/sdcard1
+#    export SECONDARY_STORAGE /storage/sdcard0
     mkdir /storage 0050 system sdcard_r
     mkdir /storage/sdcard0 0000 system system
     mkdir /storage/sdcard1 0000 system system
