Set wifi interface name remove unuseful permissions files

--- a/prebuilt/init.rc
+++ b/prebuilt/init.rc
@@ -523,6 +523,9 @@ chmod 0660 /dev/block/platform/omap/omap_hsmmc.1/by-name/oeminfo
     setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
     setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
 
+# Set this property for fix wifi
+    setprop wifi.interface wlan0
+
 # Set this property so surfaceflinger is not started by system_init
     setprop system_init.startsurfaceflinger 0
 # Run sysinit
