--- a/prebuilt/init.omap4460.rc
+++ b/prebuilt/init.omap4460.rc
@@ -38,9 +38,9 @@ on early-init
     mkdir /storage/sdcard0 0000 system system
     mkdir /storage/sdcard1 0000 system system
     # for backwards compatibility
-    symlink /storage/sdcard0 /emmc
-    symlink /storage/sdcard0 /mnt/emmc
-    symlink /storage/sdcard1 /sdcard
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard1 /sdcard2
     symlink /storage/sdcard1 /mnt/ext_sdcard
 
 on post-fs-data
